--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Prakhar Bhadauria</title>
-  <link rel="stylesheet" href="css folder/stylles.css">
+  <link rel="stylesheet" href="stylles.css">
   <link rel="icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&family=Montserrat:wght@300&family=Sacramento&display=swap" rel="stylesheet">
 </head>
