--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 
 <body>
   <div class="top-container">
-    <img class="top-cloud" src="images/cloud.png" alt="">
+    <img class="top-cloud" src="cloud.png" alt="">
     <h1>I'm Prakhar</h1>
     <h2>A programmer </h2>
-    <img class="bottom-cloud" src="images/cloud.png" alt="">
-    <img src="images/mountain.png" alt="">
+    <img class="bottom-cloud" src="cloud.png" alt="">
+    <img src="mountain.png" alt="">
   </div>
 
   <div class="middle-container">
     <div class="profile">
-      <img src="images/prakhar.png" alt="">
+      <img src="prakhar.png" alt="">
       <h2>Hello.</h2>
       <p>I am an IBMer and an Undiscovered Sales Wizard</p>
     </div>
@@ -28,12 +28,12 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="programming" src="images/programming.png" alt="">
+        <img class="programming" src="programming.png" alt="">
         <h3>Web Development</h3>
         <p >I developed my interest for coding in my college and since then its been a love and hate relationship.</p>
       </div>
       <div class="skill-row">
-        <img class="best-price" src="images/best-price.png" alt="">
+        <img class="best-price" src="best-price.png" alt="">
         <h3>Sales and Marketing</h3>
         <p >I know how to SELL and its 'THE SKILL' for me.</p>
       </div>
